给服务加类型
